--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:padding="10dp"
         android:shadowColor="#000000"
         android:shadowDy="6"
-        android:textColorHint="808080"
+        android:textColorHint="#808080"
         app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
         app:layout_constraintHorizontal_bias="0.7"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:padding="10dp"
         android:shadowColor="#000000"
         android:shadowDy="6"
-        android:textColorHint="808080"
+        android:textColorHint="#808080"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
