--- a/app/src/main/res/layout/activity_notification_mgt.xml
+++ b/app/src/main/res/layout/activity_notification_mgt.xml
@@ -1,10 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".notificationMgt">
 
+    <!-- Mute/Unmute Sound Button -->
+    <Button
+        android:id="@+id/btnMuteUnmute"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Mute/Unmute Sound"
+        android:backgroundTint="#FF8E3A"
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp" />
+
+    <!-- Test Notification Button -->
+    <Button
+        android:id="@+id/btnTestNotification"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Test Notification"
+        android:backgroundTint="#FF8E3A"
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toBottomOf="@id/btnMuteUnmute"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp" />
+
+    <!-- Test Data Sharing Button -->
+    <Button
+        android:id="@+id/btnTestShare"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Test Data Sharing"
+        android:backgroundTint="#FF8E3A"
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toBottomOf="@id/btnTestNotification"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp" />
+
+    <!-- Change Notification Timer Button -->
+    <Button
+        android:id="@+id/btnChangeTimer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Change Notification Timer (2 min)"
+        android:backgroundTint="#FF8E3A"
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toBottomOf="@id/btnTestShare"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
