--- a/app/src/main/res/layout/activity_hardware_managment.xml
+++ b/app/src/main/res/layout/activity_hardware_managment.xml
@@ -9,109 +9,93 @@
     android:padding="16dp"
     tools:context=".HardwareManagment">
 
-    <!-- Serial Number -->
-
-    <!-- Camera Name -->
-
-    <!-- IP Address (RTSP URL) -->
-
-    <!-- Camera Location -->
-
-    <!-- Add Camera Button -->
-
-    <!-- Remove Camera Button -->
     <EditText
         android:id="@+id/edtSerialNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:backgroundTint="#FF8E3A"
-        android:hint="@string/enter_serial_number"
+        android:hint="Enter Serial Number"
         android:inputType="text"
         android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TextFields" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edtCameraName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#FF8E3A"
-        android:hint="@string/enter_camera_name"
+        android:hint="Enter Camera Name"
         android:inputType="text"
         android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtSerialNumber" />
 
     <EditText
-        android:id="@+id/edtIpAddress"
+        android:id="@+id/edtRtspLink"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#FF8E3A"
-        android:hint="@string/enter_ip_address_rtsp_url"
+        android:hint="Enter IP Address (RTSP URL)"
         android:inputType="textUri"
         android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtCameraName" />
 
     <EditText
         android:id="@+id/edtCameraLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#FF8E3A"
-        android:hint="@string/enter_camera_location"
+        android:hint="Enter Camera Location"
         android:inputType="text"
         android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edtIpAddress" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtRtspLink" />
 
     <Button
         android:id="@+id/btnAddCamera"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#FF8E3A"
-        android:text="@string/add_camera"
+        android:text="Add Camera"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtCameraLocation" />
 
     <Button
         android:id="@+id/btnRemoveCamera"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#D32F2F"
-        android:text="@string/remove_camera"
+        android:text="Remove Camera"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnAddCamera" />
-    <com.google.android.exoplayer2.ui.StyledPlayerView
-        android:id="@+id/playerView"
+
+    <!-- RecyclerView to Show Camera List -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/btnRemoveCamera"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
-
+        app:layout_constraintTop_toBottomOf="@id/btnRemoveCamera"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
