--- a/app/src/main/res/layout/activity_item_camera.xml
+++ b/app/src/main/res/layout/activity_item_camera.xml
@@ -2,39 +2,49 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp">
-
-    <TextView
-        android:id="@+id/txtCameraName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Camera Location"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btnRemove"/>
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/txtRtspLink"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="RTSP Link"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtCameraName"
-        app:layout_constraintEnd_toStartOf="@id/btnRemove"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/txtLocation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Location"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/txtRtspLink"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/txtTimestamp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Timestamp"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/txtLocation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/btnRemove"
+        android:id="@+id/btnRemoveCamera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Remove"
         android:backgroundTint="#D32F2F"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toBottomOf="@id/txtTimestamp"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
