--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,26 +1,24 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
     android:background="#FFF5E7">
 
-    <!-- Profile Picture -->
     <ImageView
         android:id="@+id/imgProfilePicture"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/ic_live"
-    android:layout_marginBottom="16dp"
-    android:background="@drawable/ic_hardware"
-    android:contentDescription="Profile Picture"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_marginBottom="16dp"
+        android:contentDescription="Profile Picture"
+        android:scaleType="centerCrop"
+        android:background="@drawable/user_pic"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-
-    <!-- Change Profile Picture Button -->
     <Button
         android:id="@+id/btnChangeProfilePicture"
         android:layout_width="wrap_content"
@@ -32,30 +30,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Name Input -->
     <EditText
         android:id="@+id/edtName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Name"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btnChangeProfilePicture"
+        android:hint="Name"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/btnChangeProfilePicture" />
 
-    <!-- Phone Number Input -->
     <EditText
         android:id="@+id/edtPhoneNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:hint="Phone Number"
         android:inputType="phone"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/edtName"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/edtName" />
 
-    <!-- Change Password Button -->
     <Button
         android:id="@+id/btnChangePassword"
         android:layout_width="0dp"
@@ -66,19 +63,19 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="VisualLintButtonSize" />
 
-    <!-- Save Button -->
     <Button
         android:id="@+id/btnSaveProfile"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Save Changes"
-        android:backgroundTint="#FF8E3A"
-        android:textColor="#FFFFFF"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btnChangePassword"
+        android:backgroundTint="#FF8E3A"
+        android:text="Save Changes"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/btnChangePassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
